2007-03-14  Martin Hunt  <hunt@redhat.com>

	* staprun.c: Renamed from stpd.c. Removed quiet and print_only 
	options. Added "-x" option as an alias for "-t". Removed "-m"
	option. Updated arg processing to leave 4 slots for modoptions[].
	Bump the priority of staprun.
	* ctl.c: New. Transport control channel functions.
	* relay.c: New. Relayfs control functions for new transport.
	* relay_old.c: New. Relayfs control functions for older
	versions of relayfs.
	* mainloop.c: New. Staprun main loop.
	* staprun.h: Renamed from librelay.h. Cleaned up.
	
	* stap_merge.c: Renamed. Updated for modified save format.

	
2006-12-11  Martin Hunt  <hunt@redhat.com>

	* symbols.c (get_sections): Set buffer sizes to large enough
	sizes to hold all possible values, but also include checks in case
	we are wrong.

2006-11-15  Martin Hunt  <hunt@redhat.com>

	* symbols.c (do_kernel_symbols): Add sizeof(long) to sym_base
	to preserve 64-bit alignment.

2006-11-09  Martin Hunt  <hunt@redhat.com>

	* librelay.c: Change all references to transport messages
	to use the new names with "_stp" prefix.
	(stp_main_loop): For STP_SYMBOLS, check pointer size and 
	endianess to confirm staprun is compatible with the kernel.

	* librelay.h: Move a bunch of common includes here.
	* stpd.c: Cleanup includes.
	* symbols.c: Ditto.
	
2006-11-02  Martin Hunt  <hunt@redhat.com>

	* symbols.c: New file. Sends symbol and module information to
	the systemtap module.
	
	* librelay.c (stp_main_loop): Add STP_MODULE and STP_SYMBOLS
	message handling.

	* librelay.h: Add some new function prototypes.

	* Makefile (CFLAGS): Set to be the same as for building modules.
	Added symbols.c to sources.

2006-10-10  Tom Zanussi  <zanussi@us.ibm.com>
	
	* librelay.c (merge_output): Add check for min when writing
	output, otherwise last write happens twice.

2006-09-26  David Smith  <dsmith@redhat.com>

	* Makefile: Changed 'stpd' references to 'staprun'.
	* librelay.c: Ditto.
	* stpd.c: Ditto.
	